# cobol-rag-pipeline

./: .env.example  .gitignore  COMBINED_INTEGRATION_TEST.md  CURRENT_HANDOFF.md  FIXED_INPUT_WORKFLOW.md  PLAN.md  README.md  SIMPLE_TEST_WORKFLOW.md  pyproject.toml
config/: chunk_type_boosts.yaml  default.yaml  system_prompt.md
data/inbox/: control_flow_rag_documents.jsonl  example.json  example.txt
data/manifests/: cobol-dev.json
eval/: README.md  current_system_overall_assessment.md  pdcbvc_control_flow_rag_evaluation.md  run_gold_eval.py  structured_behavior_smoke.py
eval/questions/: pdcbvc_gold.json
scripts/: run_fixed_input_rag.sh  run_rag_test.sh
src/cobol_rag/: __init__.py  api.py  bm25.py  bundle.py  chat.py  cli.py  config.py  final_scripts_answers.py  final_scripts_artifacts.py  index.py  query.py  question_router.py  remove.py  reset.py  retrieve.py  sync.py
src/cobol_rag/loaders/: __init__.py  base.py  generic_json.py  plain_text.py  rag_documents.py  registry.py
tests/: test_loader.py
ui/: app.js  index.html  style.css
