[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "cobol-rag-pipeline"
version = "0.1.0"
description = "Flexible local RAG pipeline for COBOL analysis artifacts."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "chromadb",
  "fastapi",
  "llama-index",
  "llama-index-embeddings-ollama",
  "llama-index-llms-ollama",
  "llama-index-vector-stores-chroma",
  "pydantic-settings",
  "pyyaml",
  "rich",
  "typer",
  "uvicorn",
]

[project.scripts]
cobol-rag = "cobol_rag.cli:app"
cobol-rag-api = "cobol_rag.api:run"

[tool.setuptools.packages.find]
where = ["src"]
